<resources>
    <string name="app_name">Shopping List</string>
    <string name="welcome_msg">Welcome to the Shopping List App \n\n To use the app please create a username and 4 digit passcode</string>
    <string name="create">Create</string>
    <string name="passcode">passcode</string>
    <string name="username">Username</string>
    <string name="passcode_cannot_have_consecutive">Passcode cannot have consecutive numbers</string>
    <string name="passcode_cannot_be_same">Passcode cannot be the same number</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_passcode_to_continue">Enter passcode to continue</string>
    <string name="login">Login</string>
    <string name="title_activity_grocery_list_details">GroceryListDetailsActivity</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="item_editText_hint">Write a new item</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_items">You do not have a grocery list yet click the + button to create one</string>
    <string name="create_a_new_list">Create a new list</string>
    <string name="list_name">List Name</string>
    <string name="space">\u0020</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="update">update</string>
</resources>